<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="/* Intro To Linked Lists */"
            android:fontFamily="@font/lexend_exa"
            android:textStyle="bold"
            android:textColor="@color/mint"
            android:autoSizeTextType="uniform"
            android:layout_weight="0.7"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Back"
            style="@style/text"
            android:fontFamily="@font/lexend_exa"
            android:padding="12dp"
            android:textColor="@color/white"
            android:background="@drawable/button_purple_background"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_weight="0.3"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="Arrays Review"
        android:fontFamily="@font/lexend_zetta"
        android:textColor="@color/white"
        android:autoSizeTextType="uniform"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_text_1"
        android:fontFamily="@font/lexend_deca"
        android:textColor="@color/grey"
        android:autoSizeTextType="uniform"
        android:layout_marginBottom="10dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/lesson_singly_1"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_text_2"
        android:fontFamily="@font/lexend_deca"
        android:textColor="@color/grey"
        android:autoSizeTextType="uniform"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/large_background"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/text"
            android:text="@string/question_1"
            android:fontFamily="@font/lexend_exa"
            android:textStyle="bold"
            android:textColor="@color/dark_grey"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            style="@style/question_layout">
            <TextView
                style="@style/question_button"
                android:id="@+id/question1_A"
                android:text="A - 1"
                android:background="@drawable/button_purple_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question1_B"
                android:text="B - 3"
                android:background="@drawable/button_red_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question1_C"
                android:text="C - 4"
                android:background="@drawable/button_purple_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question1_D"
                android:text="D - Arrays don't have indexes"
                android:background="@drawable/button_red_background"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_text_3"
        android:fontFamily="@font/lexend_deca"
        android:textColor="@color/grey"
        android:autoSizeTextType="uniform"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="Linked Lists"
        android:fontFamily="@font/lexend_zetta"
        android:textColor="@color/white"
        android:autoSizeTextType="uniform"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_text_4"
        android:fontFamily="@font/lexend_deca"
        android:textColor="@color/grey"
        android:autoSizeTextType="uniform"
        android:layout_marginBottom="10dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/lesson_singly_2"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/large_background"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/text"
            android:text="@string/question_2"
            android:fontFamily="@font/lexend_exa"
            android:textStyle="bold"
            android:textColor="@color/dark_grey"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            style="@style/question_layout">
            <TextView
                style="@style/question_button"
                android:id="@+id/question2_A"
                android:text="A - 1"
                android:background="@drawable/button_purple_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question2_B"
                android:text="B - 2"
                android:background="@drawable/button_red_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question2_C"
                android:text="C - 3"
                android:background="@drawable/button_purple_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question2_D"
                android:text="D - Linked Lists don't have indexes"
                android:textSize="9sp"
                android:background="@drawable/button_red_background"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Adding Nodes into\nLinked Lists"
        android:fontFamily="@font/lexend_zetta"
        android:textColor="@color/white"
        android:autoSizeTextType="uniform"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_text_5"
        android:fontFamily="@font/lexend_deca"
        android:textColor="@color/grey"
        android:autoSizeTextType="uniform"
        android:layout_marginBottom="10dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/lesson_singly_3"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_text_6"
        android:fontFamily="@font/lexend_deca"
        android:textColor="@color/grey"
        android:autoSizeTextType="uniform"
        android:layout_marginBottom="10dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/lesson_singly_4"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/large_background"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/text"
            android:text="@string/question_3"
            android:fontFamily="@font/lexend_exa"
            android:textStyle="bold"
            android:textColor="@color/dark_grey"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            style="@style/question_layout">
            <TextView
                style="@style/question_button"
                android:id="@+id/question3_A"
                android:text="A - Oranges"
                android:background="@drawable/button_purple_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question3_B"
                android:text="B - Bananas"
                android:background="@drawable/button_red_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question3_C"
                android:text="C - Milk"
                android:background="@drawable/button_purple_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question3_D"
                android:text="D - Yogurt"
                android:background="@drawable/button_red_background"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Deleting Nodes from\nLinked Lists"
        android:fontFamily="@font/lexend_zetta"
        android:textColor="@color/white"
        android:autoSizeTextType="uniform"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_text_7"
        android:fontFamily="@font/lexend_deca"
        android:textColor="@color/grey"
        android:autoSizeTextType="uniform"
        android:layout_marginBottom="10dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/lesson_singly_5"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/large_background"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/text"
            android:text="@string/question_4"
            android:fontFamily="@font/lexend_exa"
            android:textStyle="bold"
            android:textColor="@color/dark_grey"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            style="@style/question_layout">
            <TextView
                style="@style/question_button"
                android:id="@+id/question4_A"
                android:text="A - Oranges"
                android:background="@drawable/button_purple_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question4_B"
                android:text="B - Bananas"
                android:background="@drawable/button_red_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question4_C"
                android:text="C - Milk"
                android:background="@drawable/button_purple_background"/>/>
            <TextView
                style="@style/question_button"
                android:id="@+id/question4_D"
                android:text="D - Yogurt"
                android:background="@drawable/button_red_background"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="Summary"
        android:fontFamily="@font/lexend_zetta"
        android:textColor="@color/white"
        android:autoSizeTextType="uniform"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_text_8"
        android:fontFamily="@font/lexend_deca"
        android:textColor="@color/grey"
        android:autoSizeTextType="uniform"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:id="@+id/back2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="&lt;-- Back"
            style="@style/text"
            android:fontFamily="@font/lexend_exa"
            android:padding="12dp"
            android:textColor="@color/white"
            android:background="@drawable/button_purple_background"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_weight="0.4"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Next --&gt;"
            style="@style/text"
            android:fontFamily="@font/lexend_exa"
            android:padding="12dp"
            android:textColor="@color/white"
            android:background="@drawable/button_purple_background"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_weight="0.4"
            android:layout_margin="10dp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>